--- a/WBNT/WBNT.csproj
+++ b/WBNT/WBNT.csproj
@@ -63,6 +63,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Database.cs" />
     <Compile Include="frmDBConfig.cs" />
     <Compile Include="frmDBConfig.Designer.cs">
       <DependentUpon>frmDBConfig.cs</DependentUpon>
